--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ bincode = "1.0"
 uuid = { version = "0.8", features = ["v4"] }
 fxhash = "0.2.1"
 thin-vec = { version = "0.1.0", features = ["gecko-ffi"] }
+swgl = { path = "../wr/swgl" }
 
 [dependencies.webrender]
 path = "../wr/webrender"
